# airbnb-backend

./: README.md  pyproject.toml  render.yaml
bookings/: serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py  0003_booking_host_approval_state_booking_is_cancelled.py  0004_remove_booking_host_approval_state_and_more.py
categories/: views.py
categories/migrations/: 0001_initial.py  0002_alter_category_kind.py  0003_alter_category_kind.py
config/: authentication.py  settings.py  urls.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py  0004_rename_end_experience_event_end_and_more.py  0005_rename_event_end_experience_end_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py  0004_video_description_alter_photo_description_and_more.py  0005_remove_video_description_alter_photo_description_and_more.py
reviews/: admin.py  models.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: models.py  urls 2.py  urls.py  views.py
wishlists/: models.py  views.py
(+20 files in other folders)
