[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["yoseph0524 <yoseph0524@g.ucla.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
