[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["yoseph0524 <yoseph0524@g.ucla.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.1"
djangorestframework = "^3.14.0"
python-dateutil = "^2.8.2"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
