[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["yoseph0524 <yoseph0524@g.ucla.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.0"
djangorestframework = "^3.14.0"
python-dateutil = "^2.8.2"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.2.0"
requests = "^2.31.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"
Django = "~4.0"
sentry-sdk = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
